Modification du projet pour ouvrir le fichier XML reçu